Updates Phoenix book.

--- a/jekyll/books/phoenix/1.5/elixir-introduction.html
+++ b/jekyll/books/phoenix/1.5/elixir-introduction.html
@@ -189,15 +189,18 @@
     <a class="nav-link" href="ecto-basics.html#ecto-seeds">Seeds</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ecto-basics.html#ecto-list">Return all Entries of a Table</a>
+    <a class="nav-link" href="ecto-basics.html#ecto-query">Querying the Database</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ecto-basics.html#ecto-get">Return one Entry of a Table by ID</a>
+    <a class="nav-link" href="ecto-basics.html#ecto-update">Update an Entry</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="ecto-basics.html#ecto-associations">Associations</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="index.html#training">Remote Training</a>
+    <a class="nav-link" href="index.html#remote-training">Remote training for beginners</a>
   </li>
 </ul>
   </li>
