--- a/jekyll/books/phoenix/1.5/index.html
+++ b/jekyll/books/phoenix/1.5/index.html
@@ -189,15 +189,18 @@
     <a class="nav-link" href="ecto-basics.html#ecto-seeds">Seeds</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ecto-basics.html#ecto-list">Return all Entries of a Table</a>
+    <a class="nav-link" href="ecto-basics.html#ecto-query">Querying the Database</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ecto-basics.html#ecto-get">Return one Entry of a Table by ID</a>
+    <a class="nav-link" href="ecto-basics.html#ecto-update">Update an Entry</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="ecto-basics.html#ecto-associations">Associations</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="#training">Remote Training</a>
+    <a class="nav-link" href="#remote-training">Remote training for beginners</a>
   </li>
 </ul>
   </li>
@@ -241,32 +244,39 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="https://www.phoenixframework.org">Phoenix</a>'s learning curve is steep. I am not going to
-sugar-coat this book with a "this is easy" start. Buckle up if
-<a href="https://elixir-lang.org">Elixir</a> is your first functional programming language.</p>
+<p><a href="https://www.phoenixframework.org">Phoenix</a>'s learning curve is steep. I am not
+going to sugar-coat this book with a "this is easy" start. Buckle up for an
+interesting ride, especially if <a href="https://elixir-lang.org">Elixir</a> is your first
+functional programming language.</p>
 </div>
 <div class="paragraph">
 <p>I learn best from "Hello World!" examples. I do not care about abstract
 ideas or programming theories. Give me a good and clean example, and I can make sense
 of it. If you like this kind of teaching, you are reading the right book. Please
-follow the code bread crumbs I use to teach.</p>
+follow the code breadcrumbs I use to teach.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p><strong>This book teaches by presenting bite-sized code examples. Think of them as
-bread crumbs that&#8217;ll lead you.</strong> I&#8217;ve created these examples in a way that you can understand by reading the code. Also, I add callouts with explanations next to the vital source code lines.</p>
+breadcrumbs that&#8217;ll lead you.</strong> I&#8217;ve created these examples in a way that you
+can understand by reading the code. I have also added notes with explanations
+next to the vital source code lines.</p>
 </li>
 <li>
-<p><strong>This book is a step-by-step guide. We start at zero.</strong> As few chicken-egg-problems are inescapable but I keep that to a minimum. You should understand the basics of programming and HTML. Other than that, you don&#8217;t have to have any knowledge of Phoenix or Elixir.</p>
+<p><strong>This book is a step-by-step guide. We start at zero.</strong> A few chicken and egg
+problems are inescapable, but I keep those to a minimum. You should understand
+the basics of programming and HTML. Other than that, you don&#8217;t have to have
+any knowledge of Phoenix or Elixir.</p>
 </li>
 <li>
-<p><strong>I will not hesitate to oversimply stuff.</strong> I aim to get you productive in the quickest time possible. There are other resources to learn the details
+<p><strong>I will not hesitate to oversimply stuff.</strong> I aim to get you productive in
+the quickest time possible. There are other resources to learn the details
 (e.g. the magic of OTP).</p>
 </li>
 <li>
 <p>The web-applications in this book are not intended to become eye candy. We will
-not waste time and energy to make stuff beautiful.</p>
+not waste time and energy to make them look beautiful.</p>
 </li>
 </ul>
 </div>
@@ -290,7 +300,7 @@ skip it. You can come back later if needed.
 <div class="paragraph">
 <p>The chapter <a href="elixir-introduction.html" class="page">Elixir Introduction</a>
 offers a jump-start for everybody who hasn&#8217;t worked with Elixir before. You
-don&#8217;t have to work through all examples. But you should read it to get the basic
+don&#8217;t have to work through all the examples. But you should read it to get the basic
 ideas of the language.</p>
 </div>
 <div class="paragraph">
@@ -316,32 +326,41 @@ problem or a question. Here is my advice for those times:</p>
 <li>
 <p><a href="https://stackoverflow.com" class="bare">https://stackoverflow.com</a></p>
 <div class="paragraph">
-<p>StackOverflow is my favourite spot to find help. There is a good chance somebody has already had the same problems you&#8217;re struggling with and has received answers. If not, you usually get surprisingly fast answers for new questions.</p>
+<p>StackOverflow is my favourite spot to find help. There is a good chance somebody
+has already had the same problems you&#8217;re struggling with and has received
+answers. If not, you usually get surprisingly fast answers for new questions.</p>
 </div>
 </li>
 <li>
 <p><a href="https://www.google.com" class="bare">https://www.google.com</a></p>
 <div class="paragraph">
 <p><code>Phoenix</code> is not an easy-to-search-for term. There are millions of
-construction companies with Phoenix in their name, which can help you build a
-house but don&#8217;t offer any programming help at all. You often want to
+construction companies with Phoenix in their name. These links can help you build a
+house, but they don&#8217;t offer any programming help at all. You often want to
 add either <code>Framework</code> or <code>Elixir</code> to your search queries.</p>
 </div>
 </li>
 <li>
 <p>Send me an email to <a href="mailto:sw@wintermeyer-consulting.de">sw@wintermeyer-consulting.de</a></p>
 <div class="paragraph">
-<p>Feel free to send me an email if everything else doesn&#8217;t help. Please add your Elixir and Phoenix versions and other useful information (e.g.
-database and operating system). If possible, create first a question on
-<a href="https://stackoverflow.com">stackoverflow.com</a> and send me an email with the link to that question. With that, I can answer it for you and others too.</p>
+<p>Feel free to send me an email if you can&#8217;t find the help you need. Please let
+me know your Elixir and Phoenix versions and other useful information (e.g.
+database and operating system). If possible, first create a question on
+<a href="https://stackoverflow.com">stackoverflow.com</a> and send me an email with the link
+to that question. With that, I can answer it for you and other users.</p>
 </div>
 </li>
 </ul>
 </div>
 <div class="sect2">
-<h3 id="training"><a class="anchor" href="#training"></a>Training</h3>
+<h3 id="remote-training"><a class="anchor" href="#remote-training"></a>Remote Training</h3>
 <div class="paragraph">
-<p>I offer a one and two-day remote Phoenix beginners training. During the training, we&#8217;ll work via remote pair programing (<a href="https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare-pack">Visual Studio with the Live Share extension</a>). An excellent way to get up to speed. No previous knowledge needed. OK, you need to have basic programming and HTML knowledge. Please send me an email to <a href="mailto:sw@wintermeyer-consulting.de">sw@wintermeyer-consulting.de</a> for further information.</p>
+<p>I offer a one and two-day remote Phoenix beginners training. During the
+training, we&#8217;ll work via remote pair programing
+(<a href="https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare-pack">Visual
+Studio with the Live Share extension</a>). This is an excellent way to get up to
+speed. No previous Elixir knowledge is needed. You just need basic programming and
+HTML knowledge. Please send me an email to <a href="mailto:sw@wintermeyer-consulting.de">sw@wintermeyer-consulting.de</a> for further information.</p>
 </div>
 <div class="paragraph">
 <p>Onsite training is possible too. But that depends on the local coronavirus travel restrictions.</p>
