Add Link to Emmanuel's webpage. #seo

--- a/jekyll/rails/index.html
+++ b/jekyll/rails/index.html
@@ -45,11 +45,16 @@ description: >
 
       <h3>Termine</h3>
       <p>
-        Seit dem Ausbruch der Corona-Epidemie biete ich nur noch Remote- und teilweise
-        Vor-Ort-Schulungen an.
-        Haben Sie einen Wunschtermin? Schreiben Sie mit bitte eine E-Mail an <a
+			  An Ihre Bedürfnisse angepasste Anfängerschulungen biete ich Remote- und Vor-Ort an. Haben Sie einen Wunschtermin oder eine Frage?
+        Schreiben Sie mit bitte eine E-Mail an <a
           href="mailto:sw@wintermeyer-consulting.de">sw@winermeyer-consulting.de</a>
       </p>
+
+			<h3>Weiterführende Links</h3>
+      <ul>
+				<li><a href="https://rubyonrails.org">Ruby on Rails Homepage</a></li>
+				<li><a href="https://manny.codes/4-books-for-intermediate-ruby-and-rails-developers/">4 Books For Intermediate Ruby And Rails Developers</a> von Emmanuel Hayford (<a href="https://twitter.com/siaw23">@siaw23</a>) ist eine gute Liste mit englischen Rails Büchern</li>
+			</ul>
     </div>
   </div>
 
