Fix SEO link for Emmanuel

--- a/jekyll/rails/index.html
+++ b/jekyll/rails/index.html
@@ -53,7 +53,7 @@ description: >
 			<h3>Weiterführende Links</h3>
       <ul>
 				<li><a href="https://rubyonrails.org">Ruby on Rails Homepage</a></li>
-				<li><a href="https://manny.codes/4-books-for-intermediate-ruby-and-rails-developers/">4 Books For Intermediate Ruby And Rails Developers</a> von Emmanuel Hayford (<a href="https://twitter.com/siaw23">@siaw23</a>) ist eine gute Liste mit englischen Rails Büchern</li>
+				<li><a href="https://hayford.dev/4-books-for-intermediate-ruby-and-rails-developers/">4 Books For Intermediate Ruby And Rails Developers</a> von Emmanuel Hayford (<a href="https://twitter.com/siaw23">@siaw23</a>) ist eine gute Liste mit englischen Rails Büchern</li>
 			</ul>
     </div>
   </div>
